website/versioned_docs/version-2.3.0/react-native.baseapiclient.md
---
id: version-2.3.0-react-native.baseapiclient
title: BaseAPIClient class
hide_title: true
original_id: react-native.baseapiclient
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## BaseAPIClient class


<b>Signature:</b>

```typescript
export declare abstract class BaseAPIClient 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)()](./react-native.baseapiclient._constructor_.md) |  | Constructs a new instance of the <code>BaseAPIClient</code> class |

## Properties

|  Property | Modifiers | Type | Description |
|  --- | --- | --- | --- |
|  [apiKey](./react-native.baseapiclient.apikey.md) |  | <code>string</code> |  |
|  [appEndpoint](./react-native.baseapiclient.appendpoint.md) |  | <code>string</code> |  |
|  [assetEndpoint](./react-native.baseapiclient.assetendpoint.md) |  | <code>string</code> |  |
|  [authEndpoint](./react-native.baseapiclient.authendpoint.md) |  | <code>string</code> |  |
|  [fetchFunction](./react-native.baseapiclient.fetchfunction.md) |  | <code>typeof fetch</code> |  |
|  [getExtraSessionInfo](./react-native.baseapiclient.getextrasessioninfo.md) |  | <code>() =&gt; Promise&lt;JSONObject &#124; null&gt;</code> |  |
|  [refreshTokenFunction](./react-native.baseapiclient.refreshtokenfunction.md) |  | <code>() =&gt; Promise&lt;boolean&gt;</code> |  |
|  [requestClass](./react-native.baseapiclient.requestclass.md) |  | <code>typeof Request</code> |  |
|  [userAgent](./react-native.baseapiclient.useragent.md) |  | <code>string</code> |  |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [activateOOB(code)](./react-native.baseapiclient.activateoob.md) |  |  |
|  [activateTOTP(otp)](./react-native.baseapiclient.activatetotp.md) |  |  |
|  [addLoginID(loginIDs)](./react-native.baseapiclient.addloginid.md) |  |  |
|  [authenticateWithBearerToken(bearerToken)](./react-native.baseapiclient.authenticatewithbearertoken.md) |  |  |
|  [authenticateWithOOB(options)](./react-native.baseapiclient.authenticatewithoob.md) |  |  |
|  [authenticateWithRecoveryCode(code)](./react-native.baseapiclient.authenticatewithrecoverycode.md) |  |  |
|  [authenticateWithTOTP(options)](./react-native.baseapiclient.authenticatewithtotp.md) |  |  |
|  [changePassword(newPassword, oldPassword)](./react-native.baseapiclient.changepassword.md) |  |  |
|  [createNewOOB(options)](./react-native.baseapiclient.createnewoob.md) |  |  |
|  [createNewTOTP(options)](./react-native.baseapiclient.createnewtotp.md) |  |  |
|  [del(endpoint, path, options)](./react-native.baseapiclient.del.md) |  |  |
|  [delAsset(path, options)](./react-native.baseapiclient.delasset.md) |  |  |
|  [delAuth(path, options)](./react-native.baseapiclient.delauth.md) |  |  |
|  [deleteAuthenticator(id)](./react-native.baseapiclient.deleteauthenticator.md) |  |  |
|  [deleteOAuthProvider(providerID)](./react-native.baseapiclient.deleteoauthprovider.md) |  |  |
|  [fetch(endpoint, input, init, options)](./react-native.baseapiclient.fetch.md) |  |  |
|  [get(endpoint, path, options)](./react-native.baseapiclient.get.md) |  |  |
|  [getAsset(path, options)](./react-native.baseapiclient.getasset.md) |  |  |
|  [getAuth(path, options)](./react-native.baseapiclient.getauth.md) |  |  |
|  [getAuthenticators()](./react-native.baseapiclient.getauthenticators.md) |  |  |
|  [getOAuthResult(options)](./react-native.baseapiclient.getoauthresult.md) |  |  |
|  [getSession(id)](./react-native.baseapiclient.getsession.md) |  |  |
|  [linkOAuthProviderWithAccessToken(providerID, accessToken)](./react-native.baseapiclient.linkoauthproviderwithaccesstoken.md) |  |  |
|  [listIdentities()](./react-native.baseapiclient.listidentities.md) |  |  |
|  [listRecoveryCode()](./react-native.baseapiclient.listrecoverycode.md) |  |  |
|  [listSessions()](./react-native.baseapiclient.listsessions.md) |  |  |
|  [login(loginID, password, options)](./react-native.baseapiclient.login.md) |  |  |
|  [loginOAuthProviderWithAccessToken(providerID, accessToken, options)](./react-native.baseapiclient.loginoauthproviderwithaccesstoken.md) |  |  |
|  [loginWithCustomToken(token, options)](./react-native.baseapiclient.loginwithcustomtoken.md) |  |  |
|  [logout()](./react-native.baseapiclient.logout.md) |  |  |
|  [me()](./react-native.baseapiclient.me.md) |  |  |
|  [oauthAuthorizationURL(options)](./react-native.baseapiclient.oauthauthorizationurl.md) |  |  |
|  [oauthHandler(options)](./react-native.baseapiclient.oauthhandler.md) |  |  |
|  [post(endpoint, path, options)](./react-native.baseapiclient.post.md) |  |  |
|  [postAndReturnAuthResponse(path, options)](./react-native.baseapiclient.postandreturnauthresponse.md) |  |  |
|  [postAsset(path, options)](./react-native.baseapiclient.postasset.md) |  |  |
|  [postAuth(path, options)](./react-native.baseapiclient.postauth.md) |  |  |
|  [prepareHeaders()](./react-native.baseapiclient.prepareheaders.md) |  |  |
|  [regenerateRecoveryCode()](./react-native.baseapiclient.regeneraterecoverycode.md) |  |  |
|  [removeLoginID(loginID)](./react-native.baseapiclient.removeloginid.md) |  |  |
|  [request(method, endpoint, path, options)](./react-native.baseapiclient.request.md) |  |  |
|  [requestEmailVerification(email)](./react-native.baseapiclient.requestemailverification.md) |  |  |
|  [requestForgotPasswordEmail(email)](./react-native.baseapiclient.requestforgotpasswordemail.md) |  |  |
|  [requestPhoneVerification(phone)](./react-native.baseapiclient.requestphoneverification.md) |  |  |
|  [resetPassword(form)](./react-native.baseapiclient.resetpassword.md) |  |  |
|  [revokeAllBearerToken()](./react-native.baseapiclient.revokeallbearertoken.md) |  |  |
|  [revokeOtherSessions()](./react-native.baseapiclient.revokeothersessions.md) |  |  |
|  [revokeSession(id)](./react-native.baseapiclient.revokesession.md) |  |  |
|  [setAccessTokenAndExpiresIn(accessToken, expires\_in)](./react-native.baseapiclient.setaccesstokenandexpiresin.md) |  |  |
|  [setEndpoint(appEndpoint, authEndpoint, assetEndpoint)](./react-native.baseapiclient.setendpoint.md) |  |  |
|  [setShouldNotRefreshToken()](./react-native.baseapiclient.setshouldnotrefreshtoken.md) |  |  |
|  [setShouldRefreshTokenNow()](./react-native.baseapiclient.setshouldrefreshtokennow.md) |  |  |
|  [signup(loginIDs, password, options)](./react-native.baseapiclient.signup.md) |  |  |
|  [triggerOOB(authenticatorID)](./react-native.baseapiclient.triggeroob.md) |  |  |
|  [updateLoginID(oldLoginID, newLoginID)](./react-native.baseapiclient.updateloginid.md) |  |  |
|  [updateMetadata(metadata)](./react-native.baseapiclient.updatemetadata.md) |  |  |
|  [verifyWithCode(code)](./react-native.baseapiclient.verifywithcode.md) |  |  |

